--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -10,10 +10,14 @@ import Hamburger from "./Hamburger.astro";
     <a class="logo" href="/">
       <Image alt="nettys-logo" src={logo} loading="eager" />
     </a>
+
     <!-- LVP - MVP Viewport -->
-    <NavItems />
+    <div class="hide-on-mobile">
+      <NavItems />
+    </div>
     <button class="cta-btn hide-on-mobile">Free Quote</button>
     <!-- ----- -->
+
     <!-- SVP Viewport -->
     <Hamburger />
     <!-- ---- -->
@@ -36,7 +40,7 @@ import Hamburger from "./Hamburger.astro";
       rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
       rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       height: 100px;
       padding: 0;
     }
@@ -45,12 +49,12 @@ import Hamburger from "./Hamburger.astro";
     img {
       width: 120px;
       height: 90px;
-      @media (min-width: 640px) {
+      @media (min-width: 768px) {
         width: 157px;
         height: 106px;
       }
     }
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       margin-right: auto;
       margin-left: 100px;
     }
