--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Nettys">
-  <main></main>
-</Layout>
+<Layout title="Nettys" />
 
 <style>
   main {
