--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -66,7 +66,8 @@ const servicesItems = [
       }
     });
   } else {
-    dropDownEle?.addEventListener("touchstart", () => {
+    dropDownEle?.addEventListener("touchstart", (e) => {
+      e.preventDefault();
       dropDownEle?.classList.toggle("closed");
     });
   }
