--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/NavBar.astro";
+import NavItems from "../components/NavItems.astro";
 
 interface Props {
   title: string;
