--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -31,7 +31,7 @@ import Hamburger from "./Hamburger.astro";
     z-index: 3;
     padding: 0 15px;
     height: 80px;
-    max-width: 100vw;
+    width: 100vw;
     background: transparent;
     backdrop-filter: blur(8px);
     box-shadow:
