create each page

--- a/src/components/NavItems.astro
+++ b/src/components/NavItems.astro
@@ -7,10 +7,10 @@ const navItems = [
 ];
 
 const servicesItems = [
-  { service: "Custom Website Design", href: "/custom-website-design" },
-  { service: "Website Management", href: "/website-managment" },
-  { service: "Web Hosting", href: "/web-hosting" },
-  { service: "Search Engine Optimization", href: "/seo" },
+  { service: "Custom Website Design", href: "/services/custom-website-design" },
+  { service: "Website Management", href: "/services/website-management" },
+  { service: "Web Hosting", href: "/services/web-hosting" },
+  { service: "Search Engine Optimization", href: "/services/seo" },
 ];
 ---
 
