--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,6 +54,7 @@ const { title } = Astro.props;
 
   .cta-btn {
     background-color: var(--blue);
+    color: var(--white);
     padding: 10px;
     font-weight: bold;
     border-radius: 20px;
