start of hero page for mobile

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -33,9 +33,10 @@ import Hamburger from "./Hamburger.astro";
     height: 80px;
     background: transparent;
     backdrop-filter: blur(8px);
-    box-shadow:
+    /* Add when scrolling */
+    /* box-shadow:
       rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; */
 
     @media (min-width: 992px) {
       width: 100vw;
