--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,11 @@
 ---
+import Hero from "../components/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Nettys" />
+<Layout title="Nettys">
+  <Hero />
+</Layout>
 <style>
   main {
     margin: auto;
