--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
 import NavBar from "../components/NavBar.astro";
-import NavItems from "../components/NavItems.astro";
 
 interface Props {
   title: string;
@@ -19,61 +18,74 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
+
   <body>
     <NavBar />
+
     <slot />
   </body>
+
+  <style is:global>
+    /* Small devices (tablets, 768px and up) */
+    /* @media (min-width: 768px) { ... } */
+
+    /* Medium devices (desktops, 992px and up) */
+    /* @media (min-width: 992px) { ... } */
+
+    /* Large devices (large desktops, 1200px and up) */
+    /* @media (min-width: 1200px) { ... } */
+
+    :root {
+      /* ToDo Once color pallette is decided rename to "Primary" "Secondary" "Accent" */
+      --white: white;
+      --black: black;
+      --grey: #484747;
+      --blue: rgb(67, 152, 255);
+      --green: #222f28;
+    }
+    html {
+      font-family: system-ui, sans-serif;
+      background: rgb(245, 239, 239);
+      background-size: 224px;
+      color: var(--grey);
+    }
+    body {
+      margin: 0;
+
+      @media (min-width: 992px) {
+        max-width: 1440px;
+      }
+    }
+
+    .hide-on-mobile {
+      @media (max-width: 992px) {
+        display: none !important;
+      }
+    }
+
+    .cta-btn {
+      background-color: var(--green);
+      color: var(--white);
+      padding: 10px;
+      font-weight: bold;
+      border-radius: 10px;
+      border-width: 1px;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    code {
+      font-family:
+        Menlo,
+        Monaco,
+        Lucida Console,
+        Liberation Mono,
+        DejaVu Sans Mono,
+        Bitstream Vera Sans Mono,
+        Courier New,
+        monospace;
+    }
+  </style>
 </html>
-
-<style is:global>
-  :root {
-    /* ToDo Once color pallette is decided rename to "Primary" "Secondary" "Accent" */
-    --white: white;
-    --black: black;
-    --grey: #484747;
-    --blue: rgb(67, 152, 255);
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background: rgb(245, 239, 239);
-    background-size: 224px;
-    color: var(--grey);
-  }
-  body {
-    margin: 0;
-    @media (min-width: 992px) {
-      max-width: 1440px;
-    }
-  }
-
-  .hide-on-mobile {
-    @media (max-width: 992px) {
-      display: none !important;
-    }
-  }
-
-  .cta-btn {
-    background-color: var(--blue);
-    color: var(--white);
-    padding: 10px;
-    font-weight: bold;
-    border-radius: 20px;
-    border-width: 1px;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    &:hover {
-      opacity: 0.7;
-    }
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
-</style>
