--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,17 +7,14 @@ import heroImage from "../../public/hero-image.jpg";
   <div class="copy">
     <h1>Give your buisness a digital footprint.</h1>
     <h4>
-      Transform your online identity with our bespoke web design services. At
-      Nettys, we specialize in crafting stunning, <span class="key-word"
-        >custom websites</span
-      > tailored to your unique needs. From seamless design and <span
-        class="key-word">secure hosting</span
-      > to
-      <span class="key-word">meticulous maintenance</span> and <span
-        class="key-word">cutting-edge SEO optimization</span
-      >, we handle every detail to ensure your website stands out and performs
-      at its best. Partner with us to build a digital presence that not only
-      looks great but also drives results.
+      At Netty's, we create bespoke websites that shine. From <span
+        class="key-word">custom design</span
+      > and <span class="key-word">reliable hosting</span> to <span
+        class="key-word">expert maintenance</span
+      >
+      and <span class="key-word">SEO optimization</span>, we handle it all so
+      you can focus on what you do best. Elevate your digital presence with a
+      partner who understands your needs. Let’s build something extraordinary.
     </h4>
     <button class="cta-btn">Get Started</button>
   </div>
@@ -49,7 +46,6 @@ import heroImage from "../../public/hero-image.jpg";
       color: var(--green);
       font-weight: bold;
     }
-    /* text-align: center; */
   }
   h1 {
     text-transform: capitalize;
