--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,7 +41,7 @@ const { title } = Astro.props;
       --black: black;
       --grey: #484747;
       --blue: rgb(67, 152, 255);
-      --green: #222f28;
+      --green: #3d644f;
     }
     html {
       font-family: system-ui, sans-serif;
