change h1 and h4 to div to test styles breaking in deploy

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,12 @@
 ---
-import { Image } from "astro:assets";
+// import { Image } from "astro:assets";
 // import heroImage from "../../public/hero-image.svg";
 ---
 
 <div class="hero-container">
   <div class="copy">
-    <h1>Give your buisness a digital footprint.</h1>
-    <h4>
+    <div class="title">Give your buisness a digital footprint.</div>
+    <div class="description">
       At Netty's, we create bespoke websites that shine. From <span
         class="key-word">custom design</span
       > and <span class="key-word">reliable hosting</span> to <span
@@ -15,7 +15,7 @@ import { Image } from "astro:assets";
       and <span class="key-word">SEO optimization</span>, we handle it all so
       you can focus on what you do best. Elevate your digital presence with a
       partner who understands your needs. Let’s build something extraordinary.
-    </h4>
+    </div>
     <button class="cta-btn">Get Started</button>
   </div>
 
@@ -40,12 +40,12 @@ import { Image } from "astro:assets";
       width: 200px;
     }
   }
-  h1 {
+  .title {
     text-transform: capitalize;
     text-align: center;
     font-weight: 500;
   }
-  h4 {
+  .description {
     font-weight: 200;
     .key-word {
       color: var(--green);
