dont compress css to see if it fixes styles not being shipped in hero.astro

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,8 +5,8 @@
 
 <div class="hero-container">
   <div class="copy">
-    <div class="title">Give your buisness a digital footprint.</div>
-    <div class="description">
+    <h1>Give your buisness a digital footprint.</h1>
+    <h4>
       At Netty's, we create bespoke websites that shine. From <span
         class="key-word">custom design</span
       > and <span class="key-word">reliable hosting</span> to <span
@@ -15,7 +15,7 @@
       and <span class="key-word">SEO optimization</span>, we handle it all so
       you can focus on what you do best. Elevate your digital presence with a
       partner who understands your needs. Let’s build something extraordinary.
-    </div>
+    </h4>
     <button class="cta-btn">Get Started</button>
   </div>
 
@@ -40,12 +40,12 @@
       width: 200px;
     }
   }
-  .title {
+  h1 {
     text-transform: capitalize;
     text-align: center;
     font-weight: 500;
   }
-  .description {
+  h4 {
     font-weight: 200;
     .key-word {
       color: var(--green);
