--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Nettys">
   <Hero />
 </Layout>
-<style>
-  main {
+<!-- <style>
+  /* main {
     margin: auto;
     padding: 1rem;
     width: 800px;
@@ -25,4 +25,4 @@ import Layout from "../layouts/Layout.astro";
     height: auto;
     z-index: -1;
   }
-</style>
+</style> */ -->
