add body tags in index.astro so styles show from components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,12 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Nettys">
-  <Hero />
+  <body>
+    <Hero />
+  </body>
 </Layout>
-<!-- <style>
-  /* main {
+<style>
+  main {
     margin: auto;
     padding: 1rem;
     width: 800px;
@@ -25,4 +27,4 @@ import Layout from "../layouts/Layout.astro";
     height: auto;
     z-index: -1;
   }
-</style> */ -->
+</style>
