--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import { Image } from "astro:assets";
-import heroImage from "../../public/hero-image.svg";
+// import { Image } from "astro:assets";
+// import heroImage from "../../public/hero-image.svg";
 ---
 
 <div class="hero-container">
@@ -20,7 +20,7 @@ import heroImage from "../../public/hero-image.svg";
     <button class="cta-btn">Get Started</button>
   </div>
 
-  <Image class="hero-image" src={heroImage} alt="hero-image" loading="lazy" />
+  <!-- <Image class="hero-image" src={heroImage} alt="hero-image" loading="lazy" /> -->
 </div>
 
 <style>
