remove source background

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -86,5 +86,8 @@ import seo from "/seo.webm";
     width: 47%;
     background: rgb(215, 215, 215);
     height: 165px;
+    source {
+      background: transparent;
+    }
   }
 </style>
