--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -82,7 +82,6 @@ import NavItems from "../components/NavItems.astro";
   }
 
   .nav-items-menu {
-    /* z-index: 1; */
     min-width: 100vw;
     min-height: 100vh;
     position: fixed;
@@ -98,11 +97,11 @@ import NavItems from "../components/NavItems.astro";
     align-items: center;
   }
 
-  .nav-items-menu.overlay {
+  .overlay {
     visibility: visible;
     opacity: 1;
-    background: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(50px);
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(10px);
     top: 0;
   }
 
