--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,6 @@ const { title } = Astro.props;
 
   <body>
     <NavBar />
-
     <slot />
   </body>
 
@@ -39,21 +38,19 @@ const { title } = Astro.props;
       --white: white;
       --black: black;
       --grey: #484747;
-      --blue: rgb(67, 152, 255);
-      --green: #3d644f;
+      --blue: #124076;
+      --green: #7f9f80;
     }
     html {
       font-family: system-ui, sans-serif;
-      background: rgb(245, 239, 239);
-      background-size: 224px;
+      background: var(--white);
       color: var(--grey);
     }
     body {
-      margin: 0;
-
-      @media (min-width: 992px) {
-        max-width: 1440px;
-      }
+      margin: 0px;
+      padding: 0px;
+      width: 100%;
+      overflow-y: scroll;
     }
 
     .hide-on-mobile {
@@ -63,7 +60,7 @@ const { title } = Astro.props;
     }
 
     .cta-btn {
-      background-color: var(--green);
+      background-color: var(--blue);
       color: var(--white);
       padding: 10px;
       font-weight: bold;
