--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import NavBar from "../components/NavBar.astro";
+// Supports weights 100-900
+import "@fontsource-variable/roboto-condensed";
 interface Props {
   title: string;
 }
@@ -19,7 +20,6 @@ const { title } = Astro.props;
   </head>
 
   <body>
-    <NavBar />
     <slot />
   </body>
 
@@ -40,9 +40,10 @@ const { title } = Astro.props;
       --grey: #484747;
       --blue: #124076;
       --green: #7f9f80;
+      --primary-font: "Roboto", sans-serif;
     }
     html {
-      font-family: system-ui, sans-serif;
+      font-family: var(--primary-font);
       background: var(--white);
       color: var(--grey);
     }
