--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,29 +9,19 @@ import Layout from "../layouts/Layout.astro";
   <div class="home-bg">
     <InnerLayout>
       <Hero />
-      <div class="swoosh-img" aria-label="swoosh-img"></div>
-      <WhatWeDo />
-    </InnerLayout>
+      <img
+        src="/lvpDivider.png"
+        class="swoosh-img"
+        aria-label="swoosh-img"
+      /></InnerLayout
+    >
+    <WhatWeDo />
   </div>
 </Layout>
 
 <style>
   .swoosh-img {
-    background-image: url("/svpDivider.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+    width: 100%;
     height: 150px;
-    width: 100vw;
-    padding-bottom: 50px;
-
-    @media (min-width: 768px) {
-      background-image: url("/mvpDivider.png");
-      height: 200px;
-    }
-    @media (min-width: 992px) {
-      background-image: url("/lvpDivider.png");
-      height: 350px;
-      padding-bottom: 100px;
-    }
   }
 </style>
