remove nav layout adjust logo size

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -30,17 +30,17 @@ import Hamburger from "./Hamburger.astro";
     position: relative;
     z-index: 3;
     padding: 0 15px;
-    height: 80px;
+    height: 100px;
     background: transparent;
     backdrop-filter: blur(8px);
-    /* Add when scrolling */
+    /* ToDo Add when scrolling */
     /* box-shadow:
       rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
       rgba(0, 0, 0, 0.3) 0px 8px 16px -8px; */
 
     @media (min-width: 992px) {
       width: 100vw;
-      height: 100px;
+      height: 125px;
       padding: 0;
     }
   }
@@ -59,11 +59,11 @@ import Hamburger from "./Hamburger.astro";
   }
   .logo {
     img {
-      width: 120px;
-      height: 90px;
+      width: 150px;
+      height: 115px;
       @media (min-width: 992px) {
-        width: 157px;
-        height: 106px;
+        width: 175px;
+        height: 125px;
       }
     }
     @media (min-width: 992px) {
