--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 // Supports weights 100-900
 import "@fontsource-variable/roboto-condensed";
+import NavBar from "../components/NavBar.astro";
 interface Props {
   title: string;
 }
@@ -20,6 +21,7 @@ const { title } = Astro.props;
   </head>
 
   <body>
+    <NavBar />
     <slot />
   </body>
 
