--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,13 @@
 ---
 import Hero from "../components/Hero.astro";
 import WhatWeDo from "../components/WhatWeDo.astro";
-import InnerLayout from "../layouts/InnerLayout.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Nettys">
-  <div class="home-bg">
-    <InnerLayout>
-      <Hero />
-      <img
-        src="/lvpDivider.png"
-        class="swoosh-img"
-        aria-label="swoosh-img"
-      /></InnerLayout
-    >
-    <WhatWeDo />
-  </div>
+  <Hero />
+  <img src="/lvpDivider.png" class="swoosh-img" aria-label="swoosh-img" />
+  <WhatWeDo />
 </Layout>
 
 <style>
